--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,6 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="view.upload.AddActivity">
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -57,8 +58,8 @@
 
                 <EditText
                     android:id="@+id/deskripsiEditText"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_width="406dp"
+                    android:layout_height="332dp"
                     android:layout_marginTop="12dp"
                     android:gravity="top|start"
                     android:hint="Masukkan teks deskripsi disini"
@@ -66,16 +67,14 @@
                     android:lines="5"
                     android:scrollbars="vertical"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.4"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/cameraButton" />
 
                 <Button
                     android:id="@+id/uploadButton"
-                    android:layout_width="0dp"
+                    android:layout_width="395dp"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="8dp"
-                    android:layout_marginEnd="8dp"
-                    android:layout_marginBottom="8dp"
                     android:text="@string/upload"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
