--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -71,8 +71,8 @@
 
     <Button
         android:id="@+id/logoutButton"
-        android:layout_width="287dp"
-        android:layout_height="42dp"
+        android:layout_width="290dp"
+        android:layout_height="58dp"
         android:layout_marginStart="32dp"
         android:layout_marginBottom="34dp"
         android:alpha="0"
@@ -100,11 +100,12 @@
         android:layout_height="52dp"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="16dp"
-        android:layout_marginBottom="28dp"
+        android:layout_marginBottom="36dp"
         android:src="@drawable/ic_add"
         app:backgroundTint="#888588"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/logoutButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
